--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
 </header>
 
 <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="ourmission.html">Our Mission</a>
     <a href="gallery.html">Gallery</a>
